Additional clarifications on how to reduce non-infix ops.
git-svn-id: http://svn.pugscode.org/pugs@23319 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -84,7 +84,8 @@ doesn't matter if you put a space in front of C<< postfix:<++> >>.
 To be future proof, though, you should omit the space or use dot.
 
 (A consequence of this rule is that a dot with whitespace in front of it
-is always considered a method call on C<$_>.)
+is always considered a method call on C<$_>.  If a term is not expected at
+this point, it is a syntax error.)
 
 =item *
 
